Update Generator.java